@@ -343,6 +343,10 @@ Working version
 
 ### Bug fixes:
 
+- #5673, #7636: unused type variable causes generalization error
+  (Jacques Garrigue, review by Leo White,
+   reports by Jean-Louis Giavitto and Christophe Raffalli)
+
 - #6922, #8955: Fix regression with -principal type inference for inherited
   methods, allowing to compile ocamldoc with -principal
   (Jacques Garrigue, review by Leo White)
